# napari-hardware-monitor

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/napari_hardware_monitor/: __init__.py  hardware.py  napari.yaml  widget.py
tests/: test_hardware.py
